Estrutura condicional no HTML com NODE

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,12 @@
     </p>
     <%= inscritos %>
 
+        <% if(msg){ %>
+            <h3>Algo de errado aconteceu</h3>
+            <%}else { %>
+                <h3>Tudo certo ate agora</h3>
+                <%} %>
+
 </body>
 
 </html>
