--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pr-BR">
 
 <head>
-    <meta charset="UTF-8">
+    <meta c harset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Perguntar</title>
 
-    <title>Guia de Perguntas</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
 
+    <nav class="navbar navbar-light bg-primary">
+        <a class="navbar-brand" href="/"></a>
+    </nav>
+
     <div class="container">
-        <h1>Pagina initial</h1>
+
+        <div class="card" id="formulario-pergunta">
+            <div class="card-header">
+                <h1>Faça sua pergunta</h1>
+            </div>
+
+            <div class="card-body">
+                <form action="">
+                    <label for="Titulo">Titulo</label>
+                    <input type="text" placeholders="Titulo" class="form-control">
+                    <br>
+                    <label for="Descricao">Descricao</label>
+                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <br>
+                    <button class="btn btn-primary">Enviar</button>
+                </form>
+            </div>
+        </div>
 
     </div>
 
+    <!---->
 
 
     <!-- Optional JavaScript -->
@@ -32,6 +57,5 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 </body>
-
 
 </html>
