--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,61 +1,29 @@
-<!DOCTYPE html>
-<html lang="pr-BR">
+<%- include partials/headear.ejs %>
 
-<head>
-    <meta c harset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Perguntar</title>
+    <body>
 
-    <link rel="stylesheet" href="/css/style.css">
+        <div class="container">
 
-</head>
+            <div class="card" id="formulario-pergunta">
+                <div class="card-header">
+                    <h1>Faça sua pergunta</h1>
+                </div>
 
-<body>
-
-    <nav class="navbar navbar-light bg-primary">
-        <a class="navbar-brand" href="/"></a>
-    </nav>
-
-    <div class="container">
-
-        <div class="card" id="formulario-pergunta">
-            <div class="card-header">
-                <h1>Faça sua pergunta</h1>
+                <div class="card-body">
+                    <form action="">
+                        <label for="Titulo">Titulo</label>
+                        <input type="text" placeholders="Titulo" class="form-control">
+                        <br>
+                        <label for="Descricao">Descricao</label>
+                        <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                        <br>
+                        <button class="btn btn-primary">Enviar</button>
+                    </form>
+                </div>
             </div>
 
-            <div class="card-body">
-                <form action="">
-                    <label for="Titulo">Titulo</label>
-                    <input type="text" placeholders="Titulo" class="form-control">
-                    <br>
-                    <label for="Descricao">Descricao</label>
-                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-                    <br>
-                    <button class="btn btn-primary">Enviar</button>
-                </form>
-            </div>
         </div>
 
-    </div>
+    </body>
 
-    <!---->
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    <%- include partials/footer.ejs %>
